--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -29,13 +29,15 @@
 </div>
 {% endif %}
 
-<div class="text-center m-2">
+<div class="text-center m-2 ">
+ 
   <a
-    href="{% url 'profile' %}"
-    class="font-bold text-white text-3xl text-center pb-2"
-  >
-    Your Profile Information
-  </a>
+  href="{% url 'profile' %}"
+  class=" font-bold text-white text-3xl text-center pb-2 "
+>
+  Go to your Profile? click here
+</a>
+
 </div>
 
 <div class="m-3">
